@@ -1,3 +1,10 @@
+2011-02-27
+* disable GIF scanning due to endless looping. We should start marking certain
+files as 'noscan' to avoid looping.
+* add giflib-utils as a dependency for the RPM
+* rework blacklisting, so we don't overload the datastructure for passing on
+the results.
+
 2011-02-26
 * don't exclude files to scan. The unpack scripts should be able to handle
 this nicely.
